--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -63,6 +63,18 @@ $responsiveType: 1;
 // Обнуление и общие параметры ============================================================================================================================================================================================== =============================================================================================== ===============================================================================================
 @import "base/null";
 
+.page {
+
+	&--home {
+
+	}
+
+	&__main-block {
+
+	}
+}
+
+
 body {
   font-weight: 500;
   // Скролл заблокирован
