--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1,3 +1,161 @@
-//====================================================================================================
+.main-block {
+	//'bg+' snippet
+	background: url('@img/main-page/main-block/bg.jpg') center/cover no-repeat;
+	@include adaptiveValue("padding-top", 40, 20);
+	@include adaptiveValue("padding-bottom", 60, 20);
 
-//====================================================================================================
+	// .main-block__container
+
+	&__container {
+	}
+
+	// .main-block__body
+
+	&__body {
+	}
+
+	// .main-block__slider
+
+	&__slider {
+	}
+
+	// .main-block__wrapper
+
+	&__wrapper {
+	}
+
+	// .main-block__slide
+
+	&__slide {
+	}
+
+	// .main-block__controll
+
+	&__controll {
+	}
+
+	// .main-block__media
+
+	&__media {
+	}
+
+	// .main-block__advantages
+
+	&__advantages {
+	}
+}
+.swiper {
+}
+.swiper-wrapper {
+}
+.slide-main-block {
+
+	// .slide-main-block__content
+
+	&__content {
+	}
+
+	// .slide-main-block__title
+
+	&__title {
+	}
+
+	// .slide-main-block__sub-title
+
+	&__sub-title {
+	}
+
+	// .slide-main-block__text
+
+	&__text {
+	}
+
+	// .slide-main-block__button
+
+	&__button {
+	}
+
+	// .slide-main-block__media
+
+	&__media {
+	}
+}
+
+.controll-main-block {
+
+	// .controll-main-block__dotts
+
+	&__dotts {
+	}
+
+	// .controll-main-block__fraction
+
+	&__fraction {
+	}
+}
+.fraction-controll {
+
+	// .fraction-controll__current
+
+	&__current {
+	}
+
+	// .fraction-controll__all
+
+	&__all {
+	}
+}
+.media-main-block {
+
+	// .media-main-block__body
+
+	&__body {
+	}
+
+	// .media-main-block__image
+
+	&__image {
+	}
+
+	// .media-main-block__tips
+
+	&__tips {
+	}
+
+	// .media-main-block__tip
+
+	&__tip {
+
+		// .media-main-block__tip_1
+
+		&_1 {
+		}
+
+		// .media-main-block__tip_2
+
+		&_2 {
+		}
+
+		// .media-main-block__tip_3
+
+		&_3 {
+		}
+	}
+}
+.advantages-main {
+
+	// .advantages-main__item
+
+	&__item {
+	}
+
+	// .advantages-main__icon
+
+	&__icon {
+	}
+
+	// .advantages-main__text
+
+	&__text {
+	}
+}
