--- a/src/scss/base/forms/button.scss
+++ b/src/scss/base/forms/button.scss
@@ -3,13 +3,19 @@
 
 .button {
 	display: inline-flex;
-	padding: 0px 0px;
+	padding: rem(8) rem(52);
+	background-color: $accentColor;
+	color: $mainTextColorLight;
+	box-shadow: 0 4px 20px rgba(232, 170, 49, 0.43);
+	border-radius: rem(3);
+	font-weight: 600;
+	font-size: rem(20);
+	line-height: math.div(32 , 20);
+	transition: box-shadow 0.3s ease 0s;
+
 	@media (any-hover: hover) {
 		&:hover {
-			
+			box-shadow: 0 4px 25px rgba(232, 170, 49, 0.73);
 		}
-	}
-	&._fw {
-		width: 100%;
 	}
 }
