--- a/src/scss/base/forms/button.scss
+++ b/src/scss/base/forms/button.scss
@@ -2,7 +2,7 @@
 // Снипет (HTML): btn
 
 .button {
-	display: inline-flex;
+	display: inline-block;
 	padding: rem(8) rem(52);
 	background-color: $accentColor;
 	color: $mainTextColorLight;
@@ -11,6 +11,7 @@
 	font-weight: 600;
 	font-size: rem(20);
 	line-height: math.div(32 , 20);
+	text-align: center;
 	transition: box-shadow 0.3s ease 0s;
 
 	@media (any-hover: hover) {
