--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1,51 +1,34 @@
 .main-block {
 	//'bg+' snippet
-	background: url('@img/main-page/main-block/bg.jpg') center/cover no-repeat;
-	@include adaptiveValue("padding-top", 40, 20);
-	@include adaptiveValue("padding-bottom", 60, 20);
-
-	// .main-block__container
-	&__container {
-	}
+	background: url("@img/main-page/main-block/bg.jpg") center/cover no-repeat;
+	@include adaptiveValue("padding-top", 40, 40);
+	@include adaptiveValue("padding-bottom", 60, 40);
 
 	// .main-block__body
 	&__body {
 		display: grid;
 		//миксин prc считает проценты первого арг от второго
-		grid-template-columns: 1fr percent(635, 1600);
 		align-items: start;
+		row-gap: rem(40);
+		&:not(:last-child) {
+			@include adaptiveValue("margin-bottom", 43, 30);
+		}
+		@media (min-width: $tablet) {
+			grid-template-columns: 1fr percent(635, 1600);
+		}
 	}
-	
 
 	// .main-block__slider
 	&__slider {
 		margin: 0 rem(-30);
 		padding: 0 rem(30);
-
 	}
 
 	// .main-block__wrapper
 	&__swiper {
-		&:not(:last-child) {margin-bottom: rem(30);}
-	}
-
-	// .main-block__slide
-	&__slide {
-	}
-
-	// .main-block__controll
-
-	&__controll {
-	}
-
-	// .main-block__media
-	&__media {
-
-	}
-
-	// .main-block__advantages
-
-	&__advantages {
+		&:not(:last-child) {
+			margin-bottom: rem(30);
+		}
 	}
 }
 
@@ -61,7 +44,7 @@
 		grid-auto-flow: column;
 		align-items: center;
 		gap: rem(15);
-		transform: translate(0px,10%);
+		transform: translate(0px, 10%);
 
 		.swiper-pagination-bullet {
 			cursor: pointer;
@@ -69,20 +52,20 @@
 			width: rem(18);
 			position: relative;
 			transition: all 0.3s ease 0s;
-			
-			&::after{
+
+			&::after {
 				background-color: $mainTextColorLight;
 				flex: 0 0 rem(15);
 				position: absolute;
 				width: 100%;
 				height: rem(2);
 				top: 50%;
-				transform: translate(0,-50%);
-				content:'';
+				transform: translate(0, -50%);
+				content: "";
 			}
 
-			&::before{
-				content:'';
+			&::before {
+				content: "";
 				position: absolute;
 				background-color: $accentColor;
 				width: rem(10);
@@ -91,22 +74,22 @@
 				top: 50%;
 				left: 0;
 				opacity: 0;
-				transform: translate(0,-50%);
+				transform: translate(0, -50%);
 			}
 		}
 
 		.swiper-pagination-bullet-active {
 			width: rem(30);
-			
-			&::after{
+
+			&::after {
 				background-color: $accentColor;
-				content:'';
+				content: "";
 			}
 
-			&::before{
-				opacity: 1;	
-				transition: left 3s linear 0s;	
-				left: rem(20);		
+			&::before {
+				opacity: 1;
+				transition: left 3s linear 0s;
+				left: rem(20);
 			}
 		}
 	}
@@ -127,22 +110,17 @@
 		font-weight: 600;
 		font-size: rem(24);
 		color: $accentColor;
-		letter-spacing: .2em;
+		letter-spacing: 0.2em;
 	}
 
 	// .fraction-controll__all
 
 	&__all {
-		font-size: rem(18); 
+		font-size: rem(18);
 	}
 }
 
-.swiper {
-}
-.swiper-wrapper {
-}
 .slide-main-block {
-
 	// .slide-main-block__content
 	&__content {
 		color: $mainTextColorLight;
@@ -156,28 +134,34 @@
 	&__title {
 		font-weight: 700;
 		letter-spacing: 0.03em;
-		font-size: rem(36);
-		line-height: math.div(46 , 36);
-		\\ snippet mble для нижнего отступа кроме последнего элемента
-		&:not(:last-child) {margin-bottom: em(15, 36);}
+		@include adaptiveValue("font-size", 36, 24, 992, 320, 1);
+		line-height: math.div(46, 36);
+		\\ snippet mble для нижнего отступа кроме последнего элемента &:not(:last-child) {
+			margin-bottom: em(15, 36);
+		}
 	}
 
 	// .slide-main-block__sub-title
 	&__sub-title {
-		font-size: rem(36);
-		line-height: math.div(46 , 36);
-		&:not(:last-child) {margin-bottom: em(30, 36);}
+		@include adaptiveValue("font-size", 36, 24, 992, 320, 1);
+		line-height: math.div(46, 36);
+		&:not(:last-child) {
+			margin-bottom: em(30, 36);
+		}
 	}
 
 	// .slide-main-block__text
 	&__text {
-		font-size: rem(20);
-		line-height: math.div(30 , 20);
+		@include adaptiveValue("font-size", 20, 16, 992, 320, 1);
+		line-height: math.div(30, 20);
 		color: rgba(255, 255, 255, 0.7);
 	}
 
 	// .slide-main-block__button
 	&__button {
+		@media (max-width: $mobileSmall) {
+			width: 100%;
+		}
 	}
 
 	// .slide-main-block__media
@@ -187,7 +171,6 @@
 }
 
 .controll-main-block {
-
 	// .controll-main-block__dotts
 
 	&__dotts {
@@ -199,7 +182,6 @@
 	}
 }
 .fraction-controll {
-
 	// .fraction-controll__current
 
 	&__current {
@@ -227,17 +209,18 @@
 		&::before {
 			content: "";
 			display: block;
-			width: rem(423);
-			height: rem(423);
+			width: percent(423, 449);
+			padding-bottom: percent(423, 449);
 			border: rem(2) solid rgb(255, 255, 255, 0.5);
 			border-radius: 50%;
 			position: absolute;
 			bottom: 3.5%;
 			right: 0;
-			transform: translate(percent(131,423),0px);
+			transform: translate(percent(131, 423), 0px);
 		}
 
 		img {
+			max-width: 100%;
 			position: relative;
 			z-index: 2;
 		}
@@ -257,15 +240,15 @@
 		z-index: 5;
 		transition: transform 0.5s ease 0s;
 
-		@media (any-hover: hover){
-			&:hover{
+		@media (any-hover: hover) {
+			&:hover {
 				transform: rotate(-180deg) scale(1.1);
 			}
 		}
 
 		&::before,
 		&::after {
-			content:'';
+			content: "";
 			border-radius: 50%;
 			background-color: $accentColor;
 			position: absolute;
@@ -274,7 +257,7 @@
 			top: 0;
 			left: 0;
 		}
-		&::after{
+		&::after {
 			opacity: 0.5;
 			transform: scale(1.6);
 		}
@@ -284,7 +267,7 @@
 			color: $mainTextColorLight;
 			font-size: rem(20);
 			font-weight: 600;
-			line-height: math.div(34 , 20);
+			line-height: math.div(34, 20);
 			position: absolute;
 			width: 100%;
 			height: 100%;
@@ -296,37 +279,192 @@
 
 		// .media-main-block__tip_1
 		&_1 {
-			top: percent(186,500);
-			left: percent(72,447);
+			top: percent(186, 500);
+			left: percent(72, 447);
 		}
 
 		// .media-main-block__tip_2
 		&_2 {
-			top: percent(57,500);
-			right: percent(13,447);
+			top: percent(57, 500);
+			right: percent(13, 447);
 		}
 
 		// .media-main-block__tip_3
 		&_3 {
-			bottom: percent(115,500);
-			right: percent(28,447);
+			bottom: percent(115, 500);
+			right: percent(28, 447);
 		}
 	}
 }
 .advantages-main {
+	display: grid;
+	grid-template-columns: repeat(4, auto);
+	gap: rem(10);
+	justify-content: space-between;
+
+	@media (max-width: $tablet) {
+		grid-template-columns: repeat(2, 1fr);
+		justify-items: center;
+		row-gap: rem(30);
+	}
+
+	@media (max-width: $mobile) {
+		grid-template-columns: repeat(1, 1fr);
+	}
 
 	// .advantages-main__item
-
 	&__item {
+		display: grid;
+		grid-template-rows: rem(77) auto;
+		gap: rem(17);
+		text-align: center;
+		max-width: rem(290);
 	}
 
 	// .advantages-main__icon
 
 	&__icon {
+		align-self: center;
 	}
 
 	// .advantages-main__text
 
 	&__text {
+		color: $mainTextColorLight;
+		font-weight: 600;
+		font-size: rem(20);
+		line-height: math.div(32, 20);
+	}
+}
+//========================================================================================================================================================
+
+.catalog-cards {
+	@include adaptiveValue("padding-top", 100, 40);
+	@include adaptiveValue("padding-bottom", 70, 40);
+	// .catalog-cards__container
+	&__container {
+		display: grid;
+		gap: rem(30);
+		
+		@media (min-width:$mobileSmall){
+			grid-template-columns: repeat(auto-fit, minmax(rem(400), 1fr));
+		}
+	}
+
+	// .catalog-cards__item
+	&__item {
+	}
+}
+.item-catalog-cards {
+	overflow: hidden;
+	box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
+	position: relative;
+	min-height: rem(290);
+	transition: box-shadow 0.3s ease 0s;
+
+	@media (any-hover: hover){
+		&:hover{
+			box-shadow: 0 4px 25px rgba(0, 0, 0, 0.25);
+		}
+	}
+	
+	// .item-catalog-cards__body
+	&__body {
+		position: relative;
+		z-index: 2;
+		@include adaptiveValue("padding", 30, 20);
+	}
+
+	// .item-catalog-cards__title
+	&__title {
+		&:not(:last-child) {
+			margin-bottom: em(30, 24);
+		}
+	}
+
+	// .item-catalog-cards__link-title
+	&__link-title {
+		font-weight: 600;
+		font-size: rem(24);
+		line-height: math.div(34, 24);
+		display: inline-block;
+
+		&::after {
+			content: "";
+			width: rem(70);
+			height: rem(2);
+			background-color: $accentColor;
+			display: block;
+			margin: rem(15) 0px 0px 0px;
+			transition: width 0.8s ease 0s;
+		}
+
+		@media (any-hover: hover) {
+			&:hover {
+				&::after {
+					width: 100%;
+				}
+			}
+		}
+	}
+
+	// .item-catalog-cards__list
+	&__list {
+	}
+
+	// .item-catalog-cards__item
+	&__item {
+		position: relative;
+		padding: 0px 0px 0px rem(20);
+		&::before {
+			content: "";
+			width: rem(6);
+			height: rem(6);
+			background-color: $accentColor;
+			border-radius: 50%;
+			position: absolute;
+			top: em(13, 18);
+			left: 0;
+		}
+		&:not(:last-child) {
+			margin-bottom: rem(10);
+		}
+	}
+
+	// .item-catalog-cards__link
+
+	&__link {
+		font-size: rem(18);
+		line-height: math.div(24, 18);
+		transition: opacity 0.3s ease 0s;
+
+		@media (any-hover: hover) {
+			&:hover {
+				text-decoration: underline;
+				opacity: 0.8;
+			}
+		}
+	}
+
+	// .item-catalog-cards__image
+
+	&__image {
+		width: 100%;
+		text-align: right;
+		justify-content: flex-end;
+		display: flex;
+		align-items: flex-end;
+		transform: translate(0px, 5%);
+
+		@media (min-width: $mobileSmall) {
+			position: absolute;
+			top: 0;
+			right: 0;
+			height: 100%;
+		}
+
+		img {
+			max-width: 100%;
+		}
 	}
 }
