feat products-new

--- a/src/scss/base/forms/rating.scss
+++ b/src/scss/base/forms/rating.scss
@@ -3,8 +3,8 @@
 .rating {
 	display: flex;
 	align-items: flex-end;
-	font-size: 40px;
-	line-height: 0.75;
+	font-size: rem(30); 
+	line-height: 1;
 	transition: opacity 0.3s ease 0s;
 }
 .rating.rating_sending {
@@ -17,6 +17,7 @@
 
 .rating__body {
 	position: relative;
+	letter-spacing: em(9,30);
 }
 .rating__body::before {
 	content: "★★★★★";
@@ -54,7 +55,13 @@
 	opacity: 0;
 }
 .rating__value {
+	display: none;
 	font-size: 50%;
 	line-height: 1;
 	padding: 0px 0px 0px 10px;
+}
+
+.rating__info {
+	color: #ababab;
+	font-size: rem(16);
 }
