--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -45,6 +45,8 @@
 		align-items: center;
 		gap: rem(15);
 		transform: translate(0px, 10%);
+		margin: 0 auto;
+		overflow: hidden;
 
 		.swiper-pagination-bullet {
 			cursor: pointer;
@@ -467,4 +469,9 @@
 			max-width: 100%;
 		}
 	}
+}
+//========================================================================================================================================================
+.hits-product {
+	@include adaptiveValue("padding-top", 100, 40);
+	@include adaptiveValue("padding-bottom", 70, 40);
 }
