feat articles-module

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -160,6 +160,7 @@ body {
 @import "footer";
 @import "products-slider";
 @import "products-new";
+@import "articles-module";
 
 // Подключение стилей отдельных страниц
 @import "home";
