--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -161,6 +161,7 @@ body {
 @import "products-slider";
 @import "products-new";
 @import "articles-module";
+@import "products-block";
 
 // Подключение стилей отдельных страниц
 @import "home";
