--- a/src/scss/base/forms/forms.scss
+++ b/src/scss/base/forms/forms.scss
@@ -35,7 +35,7 @@
 
 // <SELECT>
 // Снипет (HTML): sel
-// @import "select";
+@import "select";
 
 // <RATING>
 // Снипет (HTML): rating
@@ -47,4 +47,4 @@
 
 // <RANGE>
 // Снипет (HTML):
-// @import "range";
+@import "range";
