--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -11,3 +11,251 @@
 	clip: rect(0 0 0 0);
 	overflow: hidden;
 }
+
+//========================================================================================================================================================
+
+.product-card {
+	position: relative;
+	background-color: #ffffff;
+	color: $mainDarkColor;
+	display: grid;
+	height: 100%;
+	grid-template-rows: auto 1fr;
+	box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+	transition: box-shadow 0.3s ease 0s;
+
+	@media (any-hover: hover) {
+		&:hover {
+			box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.2);
+		}
+	}
+
+	// .product-card__sale
+	&__sale {
+		position: absolute;
+		top: rem(20);
+		left: 0;
+		color: $mainTextColorLight;
+		background-color: $accentColor;
+		padding: rem(6) rem(22);
+		z-index: 2;
+		pointer-events: none
+
+	}
+
+	// .product-card__image
+	&__image {
+		@include adaptiveValue("padding-top", 25, 15);
+		@include adaptiveValue("padding-bottom", 25, 15);
+		@include adaptiveValue("padding-left", 50, 15);
+		@include adaptiveValue("padding-right", 50, 15);
+	}
+
+	// .product-card__item-image-ibg
+	&__item-image-ibg {
+		display: block;
+		padding-bottom: percent(240, 270);
+	}
+
+	// .product-card__body
+
+	&__body {
+		padding: rem(20);
+		display: flex;
+		flex-direction: column;
+	}
+
+	// .product-card__title
+
+	&__title {
+		flex: 1 1 auto;
+		font-weight: 600;
+		font-size: rem(20);
+		line-height: math.div(34, 20);
+
+		&:not(:last-child) {
+			margin-bottom: em(10, 20);
+		}
+
+		@media (any-hover: hover) {
+			&:hover {
+				text-decoration: underline;
+			}
+		}
+	}
+
+	// .product-card__info
+
+	&__info {
+		&:not(:last-child) {
+			margin-bottom: em(15, 16);
+		}
+	}
+
+	&__rating {
+		justify-content: space-between;
+		&:not(:last-child) {
+			margin-bottom: rem(26);
+		}
+	}
+
+	// .product-card__footer
+
+	&__footer {
+		border-top: 1px solid rgba(20, 20, 20, 0.5);
+		padding: rem(20) 0px;
+		display: flex;
+		align-items: center;
+		gap: rem(15);
+	}
+
+	// .product-card__price
+
+	&__price {
+		flex: 1 1 auto;
+		font-weight: 600;
+		font-size: rem(20);
+		line-height: math.div(34, 20);
+	}
+
+	// .product-card__compare
+	&__favorite,
+	&__compare {
+		font-size: rem(24);
+		transition: color 0.3s ease 0s;
+		@media (any-hover: hover) {
+			&:hover {
+				color: $accentColor;
+			}
+		}
+	}
+
+	// .product-card__cart
+
+	&__cart {
+		width: 100%;
+		span {
+			display: flex;
+			flex-direction: row-reverse;
+			align-items: center;
+			justify-content: center;
+			&::before {
+				margin: 0px 0px 0px rem(16);
+			}
+		}
+	}
+}
+
+//========================================================================================================================================================
+
+.breadcrumbs {
+	word-spacing: nowrap;
+	overflow: auto;
+	height: rem(22);
+
+	// .breadcrumbs__list
+	&__list {
+		display: flex;
+	}
+
+	// .breadcrumbs__item
+
+	&__item {
+	}
+
+	// .breadcrumbs__link
+	&__link {
+		opacity: 0.5;
+		display: flex;
+		align-items: center;
+
+		&::after {
+			content: "\e900";
+			@extend %ic;
+			transform: rotate(-90deg);
+			font-size: rem(6);
+			margin: 0 em(10, 6);
+		}
+	}
+
+	// .breadcrumbs__current
+	&__current {
+		color: $accentColor;
+	}
+}
+
+//========================================================================================================================================================
+
+.title {
+	font-weight: 700;
+	font-size: rem(24);
+	line-height: math.div(29, 24);
+	&:not(:last-child) {
+		margin-bottom: em(25, 24);
+	}
+}
+
+//========================================================================================================================================================
+
+.pagination {
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+	gap: rem(30);
+
+	// .pagination__arrow
+	&__arrow {
+		color: $accentColor;
+		&::before {
+			font-size: rem(10);
+		}
+
+		&:disabled {
+			color: rgba(0, 0, 0, 0.25);
+		}
+		// .pagination__arrow_left
+		&_left {
+			transform: rotate(90deg);
+		}
+
+		// .pagination__arrow_right
+
+		&_right {
+			transform: rotate(-90deg);
+		}
+	}
+
+	// .pagination__list
+	&__list {
+		display: flex;
+		align-items: center;
+		gap: rem(14);
+	}
+
+	// .pagination__item
+
+	&__item {
+	}
+
+	// .pagination__link
+
+	&__link {
+		width: rem(34);
+		height: rem(34);
+		display: grid;
+		place-content: center;
+		border-radius: 50%;
+
+		&._active {
+			background-color: $accentColor;
+			color: $mainBgColorLight;
+		}
+
+		@media (any-hover: hover) {
+			&:hover {
+				background-color: $accentColor;
+				color: $mainBgColorLight;
+			}
+		}
+	}
+}
