feat: catalog, checkboxes

--- a/src/scss/catalog.scss
+++ b/src/scss/catalog.scss
@@ -4,8 +4,10 @@
 	// .catalog__body
 	&__body {
 		display: grid;
-		grid-template-columns: rem(375) 1fr;
 		gap: rem(30);
+		@media (min-width: $tablet) {
+			grid-template-columns: rem(375) 1fr;
+		}
 	}
 
 	// .catalog__filter
@@ -30,7 +32,7 @@
 	// .catalog__products
 	&__products {
 		display: grid;
-		grid-template-columns: repeat(auto-fill, minmax(rem(290), rem(375)));
+		grid-template-columns: repeat(auto-fit, minmax(rem(290), 1fr));
 		gap: rem(30);
 		&:not(:last-child) {
 			@include adaptiveValue("margin-bottom", 60, 30);
@@ -39,6 +41,12 @@
 
 	// .catalog__footer
 	&__footer {
+		display: flex;
+		justify-content: space-between;
+		gap: rem(20);
+		@media (max-width: $tablet) {
+			flex-direction: column;
+		}
 	}
 
 	// .catalog__more
@@ -52,11 +60,47 @@
 	}
 }
 
+//========================================================================================================================================================
+
 .filter-catalog {
+	background-color: #fefefe;
+	box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
 	// .filter-catalog__title
 	&__title {
-		display: flex;
+		background-color: $mainDarkColor;
+		font-weight: bold;
+		font-size: rem(20);
+		line-height: math.div(24, 20);
+		padding: rem(20) rem(30);
+		color: $mainTextColorLight;
+		text-align: left;
+		width: 100%;
 
+		@media (max-width: $tablet) {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			flex-direction: row-reverse;
+		}
+
+		&::before {
+			display: none;
+		}
+
+		@media (max-width: $tablet) {
+			&::before {
+				display: block;
+				color: $accentColor;
+				font-size: rem(8);
+				transition: transform 0.3s ease 0s;
+			}
+
+			&._spoller-active {
+				&::before {
+					transform: rotate(-180deg);
+				}
+			}
+		}
 	}
 	// .filter-catalog__items
 	&__items {
@@ -64,23 +108,92 @@
 	// .filter-catalog__price
 	&__price {
 	}
+	// .filter-catalog__item
+	&__item {
+	}
 }
 .price-filter {
+	padding: rem(30);
 	// .price-filter__title
 	&__title {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		flex-direction: row-reverse;
+		width: 100%;
+
+		&::before {
+			color: $accentColor;
+			font-size: rem(8);
+			transition: transform 0.3s ease 0s;
+		}
+
+		&._spoller-active {
+			&::before {
+				transform: rotate(-180deg);
+			}
+		}
 	}
 	// .price-filter__body
 	&__body {
+		padding: rem(30) 0px 0px 0px;
 	}
 	// .price-filter__inputs
 	&__inputs {
+		display: flex;
+		border: 1px solid #cbcbcb;
+		border-radius: rem(3);
+		overflow: hidden;
+
+		&:not(:last-child) {
+			margin-bottom: rem(50);
+		}
 	}
 	// .price-filter__input
 	&__input {
-	}
-	// .price-filter__range
-	&__range {
+		width: 50%;
+		height: rem(42);
+		text-align: center;
+		padding: 0 rem(15);
+
+		&:not(:last-child) {
+			border-right: 1px solid #cbcbcb;
+		}
 	}
 }
 
+.item-filter-catalog {
+	// .item-filter-catalog__title
+	&__title {
+		background-color: $mainDarkColor;
+		width: 100%;
+		color: $mainTextColorLight;
+		padding: rem(13) rem(30);
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		flex-direction: row-reverse;
 
+		&::before {
+			color: $accentColor;
+			font-size: rem(8);
+			transition: transform 0.3s ease 0s;
+		}
+
+		&._spoller-active {
+			&::before {
+				transform: rotate(-180deg);
+			}
+		}
+	}
+	// .item-filter-catalog__body
+	&__body {
+		padding: rem(30);
+	}
+	// .item-filter-catalog__checkbox
+	&__checkbox {
+		&:not(:last-child) {
+			margin-bottom: em(10, 16);
+		}
+	}
+}
