--- a/src/scss/base/forms/checkbox.scss
+++ b/src/scss/base/forms/checkbox.scss
@@ -10,10 +10,9 @@
 		height: 0;
 		opacity: 0;
 		&:focus + .checkbox__label:before {
-			box-shadow: 0 0 5px #000;
 		}
-		&:checked + .checkbox__label:before {
-			background: #000;
+		&:checked + .checkbox__label::after {
+			transform: scale(1);
 		}
 	}
 	// .checkbox__label
@@ -23,16 +22,33 @@
 		align-items: center;
 		position: relative;
 		gap: 10px;
+
 		&:before {
 			content: "";
 			align-self: flex-start;
-			flex: 0 0 20px;
-			width: 20px;
-			height: 20px;
-			border: 1px solid #a7a9ac;
+			flex: 0 0 rem(20);
+			width: rem(20);
+			height: rem(20);
+			border: 1px solid $accentColor;
+			border-radius: 3px;
+		}
+
+		&::after {
+			content: "";
+			position: absolute;
+			transform: scale(0);
+			width: rem(16);
+			height: rem(16);
+			top: rem(2);
+			left: rem(2);
+			background-color: $accentColor;
+			transition: transform 0.3s ease 0s;
 		}
 	}
 	// .checkbox__text
 	&__text {
+		small {
+			color: $accentColor;
+		}
 	}
 }
