--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,4 +1,4 @@
-// Заголовки, общие БЄМ блоки и проче...
+// Заголовки, общие БЄМ блоки и прочее...
 .visually-hidden {
 	position: absolute;
 	width: 1px;
@@ -157,11 +157,6 @@
 		display: flex;
 	}
 
-	// .breadcrumbs__item
-
-	&__item {
-	}
-
 	// .breadcrumbs__link
 	&__link {
 		opacity: 0.5;
@@ -232,13 +227,7 @@
 		gap: rem(14);
 	}
 
-	// .pagination__item
-
-	&__item {
-	}
-
 	// .pagination__link
-
 	&__link {
 		width: rem(34);
 		height: rem(34);
