--- a/src/scss/base/forms/quantity.scss
+++ b/src/scss/base/forms/quantity.scss
@@ -1,13 +1,15 @@
 //<QUANTITY>
 // Снипет (HTML): qa
 .quantity {
-	width: 88px;
-	height: 40px;
+	width: 150px;
+	height: 50px;
 	display: flex;
-	border: 1px solid rgba(166, 166, 166, 0.45);
+	// border: 1px solid rgba(166, 166, 166, 0.45);
 	// .quantity__button
 	&__button {
-		flex: 0 0 30px;
+		flex: 0 0 50px;
+		height: rem(50);
+		background-color: $mainDarkColor;
 		position: relative;
 		cursor: pointer;
 		&::before,
@@ -18,7 +20,7 @@
 			left: 50%;
 			transition: all 0.3s ease 0s;
 			margin: 0px 0px 0px -4.5px;
-			background-color: #a6a6a6;
+			background-color: #ffffff;
 			width: 9px;
 			height: 1px;
 		}
@@ -45,8 +47,8 @@
 		flex: 1 1 auto;
 		input {
 			height: 100%;
-			color: #a6a6a6;
-			font-size: 12px;
+			color: #100f0f;
+			font-size: 17px;
 			width: 100%;
 			text-align: center;
 		}
