--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -1,49 +1,267 @@
 .product {
-	// .product__container
-	&__container {
-	}
 	// .product__main
 	&__main {
+		@include adaptiveValue("margin-bottom", 120, 40);
 	}
-	// .product__images
-	&__images {
+
+	&__info {
+		@include adaptiveValue("margin-bottom", 120, 40);
 	}
 }
+.main-product {
+	display: grid;
+	align-items: start;
+
+	@media (min-width: $tablet) {
+		grid-template-columns: percent(785, 1600) 1fr;
+	}
+
+	// .main-product__images
+	&__images {
+		@media (min-width: $tablet) {
+			padding: 0 rem(30) 0 0;
+		}
+	}
+}
+
 .images-product {
 	display: grid;
 	gap: rem(16);
-
 	// .images-product__slider
 	&__slider {
 	}
-	// .images-product__wrapper
-	&__wrapper {
+	// .images-product__swiper
+	&__swiper {
 	}
 	// .images-product__slide-ibg
 	&__slide-ibg {
 		padding-bottom: percent(577, 754);
 	}
-	// .images-product__thumbs
-	&__thumbs {
-	}
 }
-//========================================================================================================================================================
-
 .thumbs-images {
-	// .thumbs-images__slider
-	&__slider {
-	}
-	// .thumbs-images__wrapper
-	&__wrapper {
-	}
 	// .thumbs-images__slide-ibg
 	&__slide-ibg {
 		cursor: pointer;
 		opacity: 0.5;
-		transition: all 0.3s ease 0s;
 		padding-bottom: percent(177, 754);
+		transition: opacity 0.3s ease 0s;
+
 		&.swiper-slide-thumb-active {
 			opacity: 1;
 		}
 	}
+}
+.body-product {
+	background: #fefefe;
+	box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+	@include adaptiveValue("padding", 30, 15);
+
+	// .body-product__header
+	&__header {
+		border-bottom: 1px solid rgba(20, 20, 20, 0.15);
+		padding: 0px 0px rem(30) 0px;
+	}
+
+	// .body-product__table
+	&__table {
+		border-bottom: 1px solid rgba(20, 20, 20, 0.15);
+		padding: rem(30) 0px;
+	}
+
+	// .body-product__options
+	&__options {
+		border-bottom: 1px solid rgba(20, 20, 20, 0.15);
+		padding: rem(30) 0px;
+	}
+	// .body-product__actions
+	&__actions {
+		padding: rem(30) 0px 0 0;
+	}
+}
+.header-product {
+	// .header-product__line
+	&__line {
+		column-gap: rem(30);
+		row-gap: rem(15);
+		display: flex;
+
+		&:not(:last-child) {
+			margin-bottom: rem(10);
+		}
+
+		@media (max-width: $mobile) {
+			flex-wrap: wrap;
+		}
+	}
+	// .header-product__title
+	&__title {
+		font-size: rem(24);
+		font-weight: 700;
+		line-height: math.div(29, 24);
+		flex: 1 1 100%;
+	}
+	// .header-product__link
+	&__link {
+		font-size: rem(24);
+	}
+}
+
+.table-product {
+	display: grid;
+	gap: rem(20);
+
+	@media (min-width: $mobile) {
+		grid-template-columns: rem(200) 1fr;
+	}
+
+	// .table-product__value
+	&__value {
+		color: rgba(20, 20, 20, 0.5);
+	}
+}
+.options-product {
+	display: grid;
+	gap: rem(20);
+
+	@media (min-width: $mobile) {
+		grid-template-columns: rem(200) 1fr;
+	}
+	// .options-product__label
+	&__label {
+		align-self: center;
+	}
+}
+
+.actions-product {
+	// .actions-product__price
+	&__price {
+		font-size: rem(30);
+		font-weight: 700;
+		display: inline-block;
+		line-height: math.div(37, 30);
+		background: url("@img/icons/rub.svg") right no-repeat;
+		padding: 0 rem(30) 0 0;
+
+		&:not(:last-child) {
+			margin-bottom: em(35, 30);
+		}
+	}
+	// .actions-product__row
+	&__row {
+		display: flex;
+		gap: rem(20);
+		@media (max-width: em(1520)) {
+			flex-direction: column;
+		}
+	}
+	// .actions-product__buttons
+	&__buttons {
+		flex: 1 1 auto;
+		display: flex;
+		flex-wrap: wrap;
+		gap: rem(20);
+
+		@media (min-width: em(1520)) {
+			justify-content: flex-end;
+		}
+	}
+
+	// .actions-product__cart
+	&__cart {
+		@media (max-width: $mobileSmall) {
+			width: 100%;
+		}
+		span {
+			display: flex;
+			align-items: center;
+			flex-direction: row-reverse;
+
+			&::before {
+				margin: 0 0 0 rem(20);
+			}
+		}
+	}
+	// .actions-product__button
+	&__button {
+		@media (max-width: $mobileSmall) {
+			width: 100%;
+		}
+	}
+}
+//========================================================================================================================================================
+
+.product-info {
+	background-color: #fefefe;
+	box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+	padding: rem(30);
+
+	// .product-info__navigation
+	&__navigation {
+		display: flex;
+		justify-content: flex-start;
+		@include adaptiveValue("gap", 60, 30);
+		border-bottom: 1px solid rgba(20, 20, 20, 0.15);
+		._tab-spoller & {
+			display: none;
+		}
+	}
+	// .product-info__title
+	&__title {
+		font-size: rem(20);
+		padding: rem(20) 0;
+		line-height: math.div(24, 20);
+		color: rgba(20, 20, 20, 0.5);
+		position: relative;
+		._tab-spoller & {
+			width: 100%;
+		}
+		&._tab-active {
+			&::after {
+				content: "";
+				position: absolute;
+				width: 100%;
+				height: 1px;
+				bottom: -1px;
+				left: 0;
+				background-color: $accentColor;
+			}
+		}
+	}
+	// .product-info__content
+	&__content {
+		padding: rem(30) 0 0 0;
+
+		p {
+			padding: rem(15) 0;
+		}
+
+		li {
+			list-style-type: disc;
+			padding: rem(15) rem(15);
+		}
+	}
+
+	&__wrapper {
+		display: flex;
+		gap: rem(30);
+
+		@media (max-width: $mobile) {
+			flex-direction: column;
+		}
+
+		.button {
+			white-space: nowrap;
+		}
+	}
+	// .product-info__body
+	&__body {
+		._tab-spoller & {
+			padding: rem(30) 0;
+		}
+	}
+
+	// &__content {
+	// 	display: flex;
+	// 	gap: rem(20);
+	// }
 }
